--- a/Passions.html
+++ b/Passions.html
@@ -15,12 +15,12 @@
             <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
             <nav>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="parcours.html">Parcours</a></li>
+                     <li><a href="index.html">Accueil</a></li>
+                    <li><a href="Parcours.html" class="active">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
-                    <li><a href="stages.html">Stages</a></li>
+                    <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
-                    <li><a href="passions.html" class="active">Passions</a></li>
+                    <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="temoignage.html">Témoignage</a></li>
@@ -86,3 +86,4 @@
     </script>
 </body>
 </html>
+
