--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,14 @@
             <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
             <nav>
                 <ul id="navLinks">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="parcours.html">Parcours</a></li>
-                    <li><a href="competences.html">Compétences</a></li>
-                    <li><a href="stages.html">Stages</a></li>
+                     <li><a href="index.html">Accueil</a></li>
+                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="compétences.html">Compétences</a></li>
+                    <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
-                    <li><a href="passions.html">Passions</a></li>
+                    <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="temoignage.html">Témoignage</a></li>
                 </ul>
             </nav>
@@ -33,21 +33,21 @@
             <article class="card" style="max-width: 500px; margin: 0 auto;">
                 <h2 class="card-title">Envoyez-moi un message</h2>
                 
-                <form id="contactForm">
-                    <div class="form-group">
-                        <label for="nom">Nom *</label>
-                        <input type="text" id="nom" name="nom" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email *</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message *</label>
-                        <textarea id="message" name="message" rows="4" required></textarea>
-                    </div>
-                    <button type="button" class="btn btn-primary" onclick="envoyerEmail()">Envoyer</button>
-                </form>
+                <form
+  action="https://formspree.io/f/maqqjery"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
                 
                 <p style="margin-top: 20px; text-align: center;">
                     <strong>Email:</strong> <a href="mailto:soulaymaktata9@gmail.com">soulaymaktata9@gmail.com</a>
@@ -93,3 +93,4 @@
     </script>
 </body>
 </html>
+
