--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
             </button>
             <nav Navigation principale>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="parcours.html">Parcours</a></li>
+                     <li><a href="index.html">Accueil</a></li>
+                    <li><a href="Parcours.html" class="active">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
-                    <li><a href="stages.html">Stages</a></li>
+                    <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
-                    <li><a href="passions.html">Passions</a></li>
+                    <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="temoignage.html">Témoignage</a></li>
-                </ul>
             </nav>
         </div>
     </header>
@@ -141,3 +140,4 @@
 
 </body>
 </html>
+
