--- a/temoignage.html
+++ b/temoignage.html
@@ -12,15 +12,15 @@
             <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
             <nav>
                 <ul id="navLinks">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="parcours.html">Parcours</a></li>
-                    <li><a href="competences.html">Compétences</a></li>
-                    <li><a href="stages.html">Stages</a></li>
+                     <li><a href="index.html">Accueil</a></li>
+                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="compétences.html">Compétences</a></li>
+                    <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
-                    <li><a href="passions.html">Passions</a></li>
+                    <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="temoignage.html" class="active">Témoignage</a></li>
+                    <li><a href="temoignage.html">Témoignage</a></li>
                 </ul>
             </nav>
         </div>
@@ -110,3 +110,4 @@
     </script>
 </body>
 </html>
+
