--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <nav Navigation principale>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="parcours.html" class="active">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
-                    <li><a href="Stages.html">Stages</a></li>
+                    <li><a href="stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
-                    <li><a href="Passions.html">Passions</a></li>
+                    <li><a href="passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="temoignage.html">Témoignage</a></li>
@@ -141,4 +141,5 @@
 
 </body>
 </html>
+
 
