--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </button>
             <nav Navigation principale>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="parcours.html" class="active">Parcours</a></li>
+                    <li><a href="index.html" class="active">Accueil</a></li>
+                    <li><a href="parcours.html">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
                     <li><a href="stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
@@ -141,5 +141,6 @@
 
 </body>
 </html>
+
 
 
