--- a/quizz.html
+++ b/quizz.html
@@ -13,12 +13,12 @@
            <nav Navigation principale>
                 <ul class="nav-links" id="navLinks">
                      <li><a href="index.html">Accueil</a></li>
-                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="Parcours.html" >Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
                     <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
                     <li><a href="Passions.html">Passions</a></li>
-                    <li><a href="quizz.html">Quizz</a></li>
+                    <li><a href="quizz.html"class="active">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="temoignage.html">Témoignage</a></li>
                 </ul>
@@ -263,4 +263,5 @@
     </script>
 </body>
 </html>
+
 
