Fix HTML structure and update navigation links

--- a/temoignage.html
+++ b/temoignage.html
@@ -13,14 +13,14 @@
             <nav>
                 <ul id="navLinks">
                      <li><a href="index.html">Accueil</a></li>
-                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="Parcours.html">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
                     <li><a href="Stages.html">Stages</a></li>
                     <li><a href="vie associative.html">Vie associative</a></li>
                     <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="temoignage.html">Témoignage</a></li>
+                    <li><a href="temoignage.html" class="active">Témoignage</a></li>
                 </ul>
             </nav>
         </div>
@@ -110,4 +110,5 @@
     </script>
 </body>
 </html>
+
 
