--- a/vie associative.html
+++ b/vie associative.html
@@ -13,10 +13,10 @@
             <nav Navigation principale>
                 <ul class="nav-links" id="navLinks">
                      <li><a href="index.html">Accueil</a></li>
-                    <li><a href="Parcours.html" class="active">Parcours</a></li>
+                    <li><a href="Parcours.html">Parcours</a></li>
                     <li><a href="compétences.html">Compétences</a></li>
                     <li><a href="Stages.html">Stages</a></li>
-                    <li><a href="vie associative.html">Vie associative</a></li>
+                    <li><a href="vie associative.html" class="active">Vie associative</a></li>
                     <li><a href="Passions.html">Passions</a></li>
                     <li><a href="quizz.html">Quizz</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -103,4 +103,5 @@
     </script>
 </body>
 </html>
+
 
