Fix HTML encoding in quizz.html

--- a/quizz.html
+++ b/quizz.html
@@ -195,7 +195,7 @@
        
         var texteReponses = {
             q1: 'Hyper Text Markup Language',
-            q2: '<a>',
+            q2: '&lt;a&gt; (balise lien)',
             q3: 'Cascading Style Sheets',
             q4: 'color',
             q5: '<footer>',
@@ -263,4 +263,5 @@
     </script>
 </body>
 </html>
+
 
